--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/sergiorojasa/Drum-Machine/issues"
   },
-  "homepage": "https://github.com/sergiorojasa/Drum-Machine#readme"
+  "homepage": "https://github.com/sergiorojasa/Drum-Machine#readme",
+  "dependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^2.2.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  }
 }
